PERFECT main page PERFECT rough draft of distro page.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p class="card-text">
         Ubuntu is one of the most popular Linux distributions, based on Debian and designed for ease of use and community support.
       </p>
-      <a href="#" class="btn btn-primary card-button">Learn More</a>
+      <a href="mirrors/ubuntu.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 2 -->
@@ -40,7 +40,7 @@
         Fedora is a cutting-edge Linux distribution sponsored by Red Hat,
         known for innovation and an upstream-first philosophy.
       </p>
-      <a href="#" class="btn btn-primary card-button">Learn More</a>
+      <a href="mirrors/fedora.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 3 -->
@@ -50,7 +50,7 @@
         Debian is a universal operating system known for its stability,
         wide architecture support, and powerful package system.
       </p>
-      <a href="#" class="btn btn-primary card-button">Learn More</a>
+      <a href="mirrors/debian.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 4 -->
@@ -60,7 +60,7 @@
         openSUSE is a powerful and versatile Linux distribution sponsored by SUSE,
         offering Leap and Tumbleweed editions.
       </p>
-      <a href="#" class="btn btn-primary card-button">Learn More</a>
+      <a href="mirrors/opensuse.html" class="btn btn-primary card-button">Learn More</a>
     </div>
   </div>
 
