Add Fedora 40 ISO files and repository metadata
- Created a new JSON file 'fedora-file.json' containing details of Fedora 40 desktop and server ISO images, including filename, size, architecture, and download URL.
- Added a new JSON file 'fedora.json' with repository synchronization details, including last sync time, frequency, status, status icon, and total repository size.

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
   <div id="distroGrid">
     <!-- Card 1 -->
     <div class="distro-card">
-      <h5 class="card-title">Ubuntu</h5>
+      <h5 class="card-title">AlmaLinux</h5>
       <p class="card-text">
-        Ubuntu is one of the most popular Linux distributions, based on Debian and designed for ease of use and community support.
+        AlmaLinux is a community-driven, enterprise-grade Linux distribution that is binary-compatible with RHEL.
       </p>
       <a href="mirrors/ubuntu.html" class="btn btn-primary card-button">Learn More</a>
     </div>
@@ -62,6 +62,44 @@
       </p>
       <a href="mirrors/opensuse.html" class="btn btn-primary card-button">Learn More</a>
     </div>
+
+    <div class="distro-card">
+      <h5 class="card-title">Kali Linux</h5>
+      <p class="card-text">
+        Kali Linux is a Debian-based distribution focused on penetration testing and digital forensics.
+      </p>
+      <a href="mirrors/ubuntu.html" class="btn btn-primary card-button">Learn More</a>
+    </div>
+
+    <!-- Card 5 -->
+    <div class="distro-card">
+      <h5 class="card-title">Linux Mint</h5>
+      <p class="card-text">
+        Linux Mint is a beginner-friendly distribution based on Ubuntu, offering a sleek and familiar desktop experience.
+      </p>
+      <a href="mirrors/fedora.html" class="btn btn-primary card-button">Learn More</a>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="distro-card">
+      <h5 class="card-title">Debian</h5>
+      <p class="card-text">
+        Debian is a universal operating system known for its stability,
+        wide architecture support, and powerful package system.
+      </p>
+      <a href="mirrors/debian.html" class="btn btn-primary card-button">Learn More</a>
+    </div>
+
+    <!-- Card 4 -->
+    <div class="distro-card">
+      <h5 class="card-title">openSUSE</h5>
+      <p class="card-text">
+        openSUSE is a powerful and versatile Linux distribution sponsored by SUSE,
+        offering Leap and Tumbleweed editions.
+      </p>
+      <a href="mirrors/opensuse.html" class="btn btn-primary card-button">Learn More</a>
+    </div>
+
   </div>
 
   <!-- Bootstrap JS (if you use it for other components) -->
