Update distro cards and enhance Fedora mirror page layout

--- a/index.html
+++ b/index.html
@@ -35,38 +35,35 @@
 
     <!-- Card 2 -->
     <div class="distro-card">
-      <h5 class="card-title">Fedora</h5>
+      <h5 class="card-title">Alpine</h5>
       <p class="card-text">
-        Fedora is a cutting-edge Linux distribution sponsored by Red Hat,
-        known for innovation and an upstream-first philosophy.
+        Alpine Linux is a security-oriented, lightweight Linux distribution based on musl libc and busybox.
       </p>
       <a href="mirrors/fedora.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 3 -->
     <div class="distro-card">
-      <h5 class="card-title">Debian</h5>
+      <h5 class="card-title">Arch Linux</h5>
       <p class="card-text">
-        Debian is a universal operating system known for its stability,
-        wide architecture support, and powerful package system.
+        Arch Linux is a lightweight and flexible distribution known for its rolling-release model and simplicity.
       </p>
       <a href="mirrors/debian.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 4 -->
     <div class="distro-card">
-      <h5 class="card-title">openSUSE</h5>
+      <h5 class="card-title">Athena</h5>
       <p class="card-text">
-        openSUSE is a powerful and versatile Linux distribution sponsored by SUSE,
-        offering Leap and Tumbleweed editions.
+        Athena is a lightweight Linux distribution designed for older hardware, focusing on speed and simplicity.
       </p>
       <a href="mirrors/opensuse.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <div class="distro-card">
-      <h5 class="card-title">Kali Linux</h5>
+      <h5 class="card-title">Black Arch</h5>
       <p class="card-text">
-        Kali Linux is a Debian-based distribution focused on penetration testing and digital forensics.
+        BlackArch is a penetration testing distribution based on Arch Linux with thousands of security tools.
       </p>
       <a href="mirrors/ubuntu.html" class="btn btn-primary card-button">Learn More</a>
     </div>
