Add initial project structure and implement core features
- Added favicon image for branding.
- Configured Svelte with vite and Tailwind CSS for styling.
- Created TypeScript configuration for better type checking.
- Developed main HTML structure with SEO optimizations and responsive design.
- Implemented Fedora mirror page with dynamic data loading.
- Added JavaScript for fetching and displaying mirror information and file lists.
- Styled the application with custom CSS for a modern look and feel.

--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,37 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-  <title>APTlantis</title>
+  
+  <title>APTlantis – High-Speed Linux Mirrors, ISOs, and Open-Source Tools</title>
+  
+  <!-- Meta SEO -->
+  <meta name="description" content="APTlantis is a blazing-fast Linux mirror hub hosting full repositories, ISOs, and open-source packages for the global FOSS community. Built for speed. Powered by Hetzner." />
+  <meta name="keywords" content="APTlantis, Linux mirrors, Linux ISOs, open-source downloads, Debian mirror, Fedora mirror, Arch mirror, Linux repos, FOSS archive, open source hosting" />
+  <meta name="author" content="APTlantis Team" />
+  <meta name="robots" content="index, follow" />
 
-  <!-- If Bootstrap is needed for other styling or components -->
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="APTlantis – High-Speed Linux Mirrors & ISOs" />
+  <meta property="og:description" content="APTlantis provides lightning-fast access to Linux repos, ISO downloads, and open-source archives. Mirror. Test. Build." />
+  <meta property="og:url" content="https://aptlantis.net/" />
+  <meta property="og:image" content="https://aptlantis.net/assets/preview.jpg" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="APTlantis – Fast Linux Mirrors and Repos" />
+  <meta name="twitter:description" content="Mirror the world. APTlantis is your one-stop hub for Linux distributions, open-source packages, and blazing fast downloads." />
+  <meta name="twitter:image" content="https://aptlantis.net/assets/preview.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+  <!-- Optional: Canonical link for search engine consistency -->
+  <link rel="canonical" href="https://aptlantis.net/" />
+
   <link rel="stylesheet" href="/styles.css" />
 </head>
+
 
 <body>
 
@@ -65,16 +91,15 @@
       <p class="card-text">
         BlackArch is a penetration testing distribution based on Arch Linux with thousands of security tools.
       </p>
-      <a href="mirrors/ubuntu.html" class="btn btn-primary card-button">Learn More</a>
+      <a href="/" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 5 -->
     <div class="distro-card">
-      <h5 class="card-title">Linux Mint</h5>
+      <h5 class="card-title">Calculate</h5>
       <p class="card-text">
-        Linux Mint is a beginner-friendly distribution based on Ubuntu, offering a sleek and familiar desktop experience.
-      </p>
-      <a href="mirrors/fedora.html" class="btn btn-primary card-button">Learn More</a>
+        Calculate Linux is a Gentoo-based distribution optimized for rapid deployment in corporate environments.      </p>
+      <a href="/" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 3 -->
@@ -84,17 +109,16 @@
         Debian is a universal operating system known for its stability,
         wide architecture support, and powerful package system.
       </p>
-      <a href="mirrors/debian.html" class="btn btn-primary card-button">Learn More</a>
+      <a href="/" class="btn btn-primary card-button">Learn More</a>
     </div>
 
     <!-- Card 4 -->
     <div class="distro-card">
-      <h5 class="card-title">openSUSE</h5>
+      <h5 class="card-title">Fedora</h5>
       <p class="card-text">
-        openSUSE is a powerful and versatile Linux distribution sponsored by SUSE,
-        offering Leap and Tumbleweed editions.
+        Fedora is a cutting-edge Linux distribution sponsored by Red Hat, known for innovation and upstream-first philosophy.
       </p>
-      <a href="mirrors/opensuse.html" class="btn btn-primary card-button">Learn More</a>
+      <a href="mirrors/fedora.html" class="btn btn-primary card-button">Learn More</a>
     </div>
 
   </div>
